# next

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rome.json  rustfmt.toml  tsconfig.base.json
.github/: CODEOWNERS
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/routes/: blur.rs  brighten.rs  convert.rs  flip.rs  huerotate.rs  mod.rs  resize.rs
apps/api/src/routes/image/: blur.rs  brighten.rs  convert.rs  flip.rs  grayscale.rs  huerotate.rs  mod.rs  resize.rs
apps/api/src/routes/tools/: mod.rs  piston.rs  sauce.rs
apps/api/src/utils/: http.rs
apps/client/: package.json  tsconfig.json  tsup.config.ts
apps/client/src/: index.ts  tsconfig.json
apps/client/src/commands/prefixed/dev/: eval.ts
apps/client/src/commands/prefixed/developer/: eval.ts
apps/client/src/lib/: cache.ts  setup.ts
apps/client/src/lib/api/: index.ts  types.ts
apps/client/src/lib/api/common/: index.ts
apps/client/src/lib/cache/: attachment.ts  snipe.ts
apps/client/src/lib/config/: client.ts
apps/client/src/lib/constants/: index.ts
apps/client/src/lib/image/: client.ts
apps/client/src/lib/structures/: ZeyrClient.ts  zeyr.ts
apps/client/src/lib/types/: arguments.d.ts  common.ts  discordstatus.ts
apps/client/src/lib/util/: discord.ts  time.ts
apps/client/src/lib/utils/: common.ts  time.ts
apps/client/src/listeners/: mentionPrefixOnly.ts  ready.ts
apps/client/src/listeners/messages/: messageCreate.ts  messageDelete.ts
apps/client/src/preconditions/: OwnerOnly.ts
apps/client/src/scheduled-tasks/: presence.ts  reminder.ts  stats.ts
(+21 files in other folders)
