
[workspace]
resolver = "2"
members = ["apps/api"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[workspace.package]
edition = "2021"
authors = ["simxnet", "chikof"]

[workspace.dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.101"
