[package]
name = "api"
edition = "2021"
version = "0.2.0"

[dependencies]
actix-web = "4"
reqwest = "0.11.18"
md5 = "0.7.0"
anyhow = { workspace = true }
piston_rs = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.image]
version = "0.24.6"
features = ["png", "jpeg", "webp-encoder"]

[dependencies.sauce-api]
git = "https://github.com/zeyrbot/sauce-api/"
branch = "master"
